--- a/index.html
+++ b/index.html
@@ -320,10 +320,8 @@ div.tocify {
 <p>Leaflet is the leading open-source JavaScript library for mobile-friendly interactive maps. Weighing just about 38 KB of JS, it has all the mapping features most developers ever need.</p>
 <p>Leaflet is designed with simplicity, performance and usability in mind. It works efficiently across all major desktop and mobile platforms, can be extended with lots of plugins, has a beautiful, easy to use and well-documented API and a simple, readable source code that is a joy to contribute to.</p>
 <p>Leaflet is one of the most popular open-source JavaScript libraries for interactive maps. It’s used by websites ranging from The New York Times and The Washington Post to GitHub and Flickr, as well as GIS specialists like OpenStreetMap, Mapbox, and CartoDB.</p>
-<p>This R package makes it easy to integrate and control Leaflet maps in R.</p>
-<pre><code>## Warning: package 'leaflet' was built under R version 3.5.3</code></pre>
-<div id="htmlwidget-cc4bb4f464916bc65d04" style="width:672px;height:480px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-cc4bb4f464916bc65d04">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script>
+<p>This R package makes it easy to integrate and control Leaflet maps in R. <div id="htmlwidget-dd29dd22bda3870521b4" style="width:672px;height:480px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-dd29dd22bda3870521b4">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addMarkers","args":[-36.852,174.768,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"The birthplace of R",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[-36.852,-36.852],"lng":[174.768,174.768]}},"evals":[],"jsHooks":[]}</script></p>
 </div>
 <div id="features" class="section level2">
 <h2>Features</h2>
@@ -370,8 +368,8 @@ library(leaflet)</code></pre>
   # add a marker for Buckhingham palace
   addMarkers(lng=-0.1419, lat=51.5014, popup=&quot;Buckingham Palace, London&quot;) 
 m  # Print the map</code></pre>
-<div id="htmlwidget-4dfdc5e2fe776f08ebfe" style="width:672px;height:480px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-4dfdc5e2fe776f08ebfe">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addMarkers","args":[51.5014,-0.1419,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"Buckingham Palace, London",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[51.5014,51.5014],"lng":[-0.1419,-0.1419]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-9e168ff6124ec30e3f08" style="width:672px;height:480px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-9e168ff6124ec30e3f08">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addMarkers","args":[51.5014,-0.1419,null,null,null,{"interactive":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},"Buckingham Palace, London",null,null,null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null]}],"limits":{"lat":[51.5014,51.5014],"lng":[-0.1419,-0.1419]}},"evals":[],"jsHooks":[]}</script>
 <hr />
 <div id="base-map-tiles" class="section level3">
 <h3>Base Map Tiles</h3>
@@ -384,24 +382,39 @@ m  # Print the map</code></pre>
   addProviderTiles(providers$Esri.WorldTopoMap)%&gt;%
   # Setview sets the intial position of the map to Scotland
   setView(lng = -5.394, lat = 56.821, zoom = 6) 
-m  # Print the map</code></pre>
-<div id="htmlwidget-26496ea3168d29255c88" style="width:672px;height:480px;" class="leaflet html-widget"></div>
-<script type="application/json" data-for="htmlwidget-26496ea3168d29255c88">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addProviderTiles","args":["Esri.WorldTopoMap",null,null,{"errorTileUrl":"","noWrap":false,"detectRetina":false}]}],"setView":[[56.821,-5.394],6,[]]},"evals":[],"jsHooks":[]}</script>
+
+# Print the map
+m</code></pre>
+<div id="htmlwidget-9e561e4f85c0557bc762" style="width:672px;height:480px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-9e561e4f85c0557bc762">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addProviderTiles","args":["Esri.WorldTopoMap",null,null,{"errorTileUrl":"","noWrap":false,"detectRetina":false}]}],"setView":[[56.821,-5.394],6,[]]},"evals":[],"jsHooks":[]}</script>
 <hr />
 </div>
 </div>
 <div id="loading-markers-from-a-file" class="section level2">
 <h2>Loading Markers from a file</h2>
 <p>This example loads the location of the 32 NFL franchises and plots them on a map.</p>
-<p>The data is in csv format and contains three columns:</p>
+<p>The data is in csv format and contains four columns:</p>
 <ol style="list-style-type: decimal">
-<li>Franchise - The name of the NFL franchise</li>
+<li>Team - The name of the NFL franchise</li>
+<li>Confrence - AFC or NFC</li>
 <li>Latitude - The latitude of the franchise</li>
 <li>Longitude - The longitude of the franchise</li>
 </ol>
 <p>You can explore the data here</p>
-<div id="htmlwidget-fe17cd708c10629d5f33" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-fe17cd708c10629d5f33">{"x":{"filter":"none","data":[["1","2","3","4","5","6"],["Chicago","Green Bay","Arizona","Atlanta","Baltimore","Buffalo"],[41.53,44.3,33.27,33.45,39.17,42.54],[87.38,88.01,112.05,84.23,76.37,78.53]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Franchise<\/th>\n      <th>Latitude<\/th>\n      <th>Longitude<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":[2,3]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-9cd461235da9700bf799" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-9cd461235da9700bf799">{"x":{"filter":"none","data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32"],["Titans","Giants","Steelers","Panthers","Ravens","Buccaneers","Colts","Vikings","Cardinals","Cowboys","Falcons","Jets","Broncos","Dolphins","Eagles","Bears","Patriots","Redskins","Packers","Chargers","Saints","Texans","Bills","Forty-Niners","Jaguars","Browns","Raiders","Chiefs","Rams","Seahawks","Bengals","Lions"],["AFC","NFC","AFC","NFC","AFC","NFC","AFC","NFC","NFC","NFC","NFC","AFC","AFC","AFC","NFC","NFC","AFC","NFC","NFC","AFC","NFC","AFC","AFC","NFC","AFC","AFC","AFC","AFC","NFC","NFC","AFC","NFC"],[36.166461,40.812194,40.446786,35.225808,39.277969,27.975967,39.760056,44.973881,33.5277,32.747778,33.757614,40.812194,39.743936,25.957919,39.900775,41.862306,42.090925,38.907697,44.501306,32.783117,29.950931,29.684781,42.773739,37.713486,30.323925,41.506022,37.751411,39.048914,38.632975,47.595153,39.095442,42.340156],[-86.771289,-74.076983,-80.015761,-80.852861,-76.622767,-82.50335,-86.163806,-93.258094,-112.262608,-97.092778,-84.400972,-74.076983,-105.020097,-80.238842,-75.167453,-87.616672,-71.26435,-76.864517,-88.062167,-117.119525,-90.081364,-95.410956,-78.786978,-122.386256,-81.637356,-81.699564,-122.200889,-94.484039,-90.188547,-122.331625,-84.516039,-83.045808]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Team<\/th>\n      <th>Confrence<\/th>\n      <th>Lat<\/th>\n      <th>Lon<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"columnDefs":[{"className":"dt-right","targets":[3,4]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<p>By loading the data from the csv and passing it to leaflet we can display it as markers on the map.</p>
+<pre class="r"><code>#Load the NFL data from the csv file
+teams &lt;- read.csv(&quot;data/nfl_franchises.csv&quot;, stringsAsFactors=F)
+
+m &lt;- leaflet(teams) %&gt;%
+  # Add default OpenStreetMap map tiles
+  addTiles() %&gt;%
+  addCircles(~Lon, ~Lat, popup=teams$Team, weight = 3, radius=40, 
+                 color=&quot;#C83803&quot;, stroke = TRUE, fillOpacity = 1) 
+m  # Print the map</code></pre>
+<div id="htmlwidget-f2219f7e51ef9feaf665" style="width:672px;height:480px;" class="leaflet html-widget"></div>
+<script type="application/json" data-for="htmlwidget-f2219f7e51ef9feaf665">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addCircles","args":[[36.166461,40.812194,40.446786,35.225808,39.277969,27.975967,39.760056,44.973881,33.5277,32.747778,33.757614,40.812194,39.743936,25.957919,39.900775,41.862306,42.090925,38.907697,44.501306,32.783117,29.950931,29.684781,42.773739,37.713486,30.323925,41.506022,37.751411,39.048914,38.632975,47.595153,39.095442,42.340156],[-86.771289,-74.076983,-80.015761,-80.852861,-76.622767,-82.50335,-86.163806,-93.258094,-112.262608,-97.092778,-84.400972,-74.076983,-105.020097,-80.238842,-75.167453,-87.616672,-71.26435,-76.864517,-88.062167,-117.119525,-90.081364,-95.410956,-78.786978,-122.386256,-81.637356,-81.699564,-122.200889,-94.484039,-90.188547,-122.331625,-84.516039,-83.045808],40,null,null,{"interactive":true,"className":"","stroke":true,"color":"#C83803","weight":3,"opacity":0.5,"fill":true,"fillColor":"#C83803","fillOpacity":1},["Titans","Giants","Steelers","Panthers","Ravens","Buccaneers","Colts","Vikings","Cardinals","Cowboys","Falcons","Jets","Broncos","Dolphins","Eagles","Bears","Patriots","Redskins","Packers","Chargers","Saints","Texans","Bills","Forty-Niners","Jaguars","Browns","Raiders","Chiefs","Rams","Seahawks","Bengals","Lions"],null,null,{"interactive":false,"permanent":false,"direction":"auto","opacity":1,"offset":[0,0],"textsize":"10px","textOnly":false,"className":"","sticky":true},null,null]}],"limits":{"lat":[25.957919,47.595153],"lng":[-122.386256,-71.26435]}},"evals":[],"jsHooks":[]}</script>
 <hr />
 </div>
 <div id="heat-map" class="section level2">
